--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
   <h1>Shimul404 Dex কাস্টম ফন্ট টেস্ট</h1>
   <p>
     এই লেখা তোমার GitHub Pages থেকে লোড হওয়া কাস্টম ফন্ট দিয়ে দেখানো হচ্ছে।
-    এখন তুমি যেকোনো ওয়েবসাইট বা Blogger পেজে এই কোড দিয়ে ফন্ট ব্যবহার করতে পারবে।
+    এখন তুমি যেকোনো ওয়েবসাইট বা Blogger পেজে এই কোড দিয়ে ফন্ট ব্যবহার করতে পারবে। ক্ষুদ্র, বিজ্ঞান, ব্রহ্মা, ঙ্গিবাদ 
   </p>
+  
 </body>
 </html>
